# salesmartly-api-skills

./: .github-token  .gitignore  BEST-PRACTICES.md  CHANGELOG.md  CO-CREATION.md  CONTRIBUTING.md  LICENSE  NO-DIRECT-API.md  PUBLISH-GUIDE.md  README.md  RELEASE-CHECKLIST.md  SKILL.md  UPDATE-GUIDE.md  UPDATE-INSTRUCTIONS.md  api-key-dev.json  api-key.json.example  intent-config.json  intent_router.py  pyproject.toml
docs/: INTENT-RECOGNITION-GUIDE.md  README.md
examples/: 01-查询销售数据.md  02-查询客户.md  03-发送消息.md  quickstart.py
references/: PROGRESSIVE-UPDATE-GUIDE.md  README.md  SKILL-OPTIMIZATION.md  authentication.md
scripts/: README.md  add-whatsapp-device.py  assign-session.py  batch-assign-session.py  batch-generate-scripts.py  batch-tags.py  batch-talk-back.py  check-api-updates.py  check-customer-feedback.py  create-customer.py  customer-stats.py  daily-feedback-report.py  daily-sales-report.py  delete-whatsapp-device.py  end-session.py  find-followup-customers.py  generate-query-script.py  get-customer-history.py  get-whatsapp-qrcode.py  import-orders.py  member-session-stats.py  online-duration-report.py  query-all-messages.py  query-customers.py  query-link-records.py  query-links.py  query-members.py  query-messages.py  query-sessions.py  query-whatsapp-apps.py  set-whatsapp-proxy.py  test-customer-history.py  test-find-followup.py  update-customer.py
scripts/lib/: __init__.py  client.py  config.py  exceptions.py  output.py
tests/: test-intent-recognition.py  test-report.json  test_intent_accuracy.py
