[project]
name = "salesmartly-agent"
version = "1.0.0"
description = "SalesSmartly 全功能 API 自动化脚本系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "SalesSmartly AI Skill Contributors"}
]
keywords = ["salesmartly", "api", "automation", "openclaw", "ai", "crm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Communications",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/salesmartly-agent"
Documentation = "https://github.com/YOUR_USERNAME/salesmartly-agent#readme"
Repository = "https://github.com/YOUR_USERNAME/salesmartly-agent.git"
Issues = "https://github.com/YOUR_USERNAME/salesmartly-agent/issues"
Changelog = "https://github.com/YOUR_USERNAME/salesmartly-agent/blob/main/CHANGELOG.md"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
